[package]
name = "lightarchitects-gateway"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
# License override: the workspace is MPL-2.0, but this gateway crate carries
# business-critical orchestration logic (arena RL pipeline, conductor runtime,
# sibling identity templates, squad-comms protocol, canon validation, governance
# gates) and is licensed separately. See ./LICENSE for terms.
license-file = "LICENSE"
repository.workspace = true
publish = false
description = "Light Architects unified gateway — MCP server, Arena HTTP API, and autonomous agent runtime."

[workspace]
members = ["."]

[workspace.package]
edition = "2024"
rust-version = "1.87"
authors = ["KFT <kf.tan@lightarchitects.io>"]
license = "MPL-2.0"
repository = "https://github.com/TheLightArchitects/lightarchitects-sdk"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "deny"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
rpassword = "7"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = "4"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
dirs-next = "2"
async-trait = "0.1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
governor = "0.6"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
cron = "0.15"
notify = "6"
dashmap = "6"
futures-util = "0.3"
tokio-tungstenite = "0.26"
libc = "0.2"
anyhow = "1"
regex = "1"
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
keyring = { version = "3", features = ["sync-secret-service", "vendored", "crypto-rust"] }
security-framework = "3"
tempfile = "3"
tokio-test = "0.4"
fs2 = "0.4"
hmac = "0.12"
sha2 = "0.10"
neo4rs = { version = "0.8", features = ["json"] }
moka = { version = "0.12", features = ["future"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
similar = "2"

[[bin]]
name = "lightarchitects"
path = "src/main.rs"
doc = false

[features]
default = ["spawner"]

## Subprocess spawn mode (current behaviour). Retained as fallback even when
## inline handlers are enabled so that agents configured as `mode = "spawner"`
## still work.
spawner = []

## In-process sibling handlers — Canon XLIII SSC partition (2026-05-22)
##
## SSC-absorbable (score 0–1): inline-corso, inline-quantum, inline-laex
## SSC-daemon (score ≥2): inline-soul / inline-eva / inline-ayin REMOVED — enabling them
## triggers compile_error! (Canon XLIII violation). These flags are retained as
## documented dead-ends so CI surfaces the violation immediately if re-added.
##
## SERAPH intentionally omitted — spawner-only ([P] scan tools + [S] red-team principal).
## LÆX is inline-only by design (no standalone binary).

## SSC-absorbable inline handlers (score 0):
inline-corso = []
inline-quantum = []
inline-laex = []

## SSC-daemon violations — kept for CI trap, always emit compile_error:
## inline-soul: SSC=3 ([K] Neo4j + [O] AYIN + [P] fastembed) — DAEMON REQUIRED
## inline-eva:  SSC=2 ([K] vaults + [O] hook pipeline) — DAEMON REQUIRED
## inline-ayin: SSC=2 ([O] observability + [P] :3742) — DAEMON REQUIRED (Pattern C)
inline-soul = []
inline-eva = []
inline-ayin = []

## Convenience: enable absorbable siblings only. Daemon violations excluded.
inline-all = ["inline-corso", "inline-quantum", "inline-laex"]

## helix feature kept as no-op stub (helix = ["inline-soul"] previously loaded SOUL with
## Neo4j + fastembed; SOUL is now daemon-only per Canon XLIII SSC=3).
helix = []

[lints]
workspace = true

[dependencies]
# ── Unified SDK (replaces all individual sibling crate deps) ──────────────────
lightarchitects = { path = "../lightarchitects", features = ["agent-cli", "lightsquad", "loops-core"] }
lightarchitects-arch = { path = "../lightarchitects-arch" }

# ── Shared (both MCP + Arena modes) ──────────────────────────────────────────
async-trait = "0.1"
inquire = "0.7"
hmac = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
rpassword = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-std", "signal", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
dirs-next = { workspace = true }

# ── Arena mode (HTTP gateway + scheduler + heartbeat agents) ──────────────────
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
governor = { workspace = true }
neo4rs = { workspace = true }
moka = { workspace = true }
sha2 = { workspace = true }
rusqlite = { workspace = true }
cron = { workspace = true }
notify = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
libc = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
keyring = { workspace = true }
tempfile = { workspace = true }
fs2 = { workspace = true }
similar = { workspace = true }

# ── Platform-specific ─────────────────────────────────────────────────────────
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
proptest = { workspace = true }
tower = { workspace = true, features = ["util"] }
axum = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "wave32_perf"
harness = false
