[package]
name = "lightarchitects-oracle"
version = "0.1.0"
description = "Multi-model mathematical verification oracle — parallel dispatch to Leanstral, DeepSeek, Qwen, and other reasoning models for consensus-based proof and optimization."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# macOS Keychain access for API keys
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }

[lints]
workspace = true
