[package]
name = "lightarchitects-seraph"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed client for the SERAPH MCP server (penTools, 18 actions, Content-Length framing)."

[features]
default = []
ssh = ["dep:openssh", "dep:zeroize", "dep:tokio"]

[lints]
workspace = true

[dependencies]
lightarchitects-core = { path = "../lightarchitects-core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
toml.workspace = true

# SSH transport for remote SERAPH instances (Khadas Edge 2 Pro)
openssh = { workspace = true, optional = true }
# Zero-on-drop for SSH key material
zeroize = { workspace = true, optional = true }
# Async runtime for SSH session pool and exec_via_ssh
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tempfile.workspace = true
