[package]
name = "lightarchitects-soul"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed client for the SOUL knowledge-graph MCP server (soulTools, 23 actions)"
publish = false

[dependencies]
lightarchitects-core = { path = "../lightarchitects-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
lightarchitects-core = { path = "../lightarchitects-core", features = ["test-utils"] }

[lints]
workspace = true
