[package]
name = "lightarchitects-soul"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed SOUL MCP client (soulTools, 23 actions) and offline storage backend abstractions"
keywords = ["mcp", "ai", "knowledge-graph", "sdk", "soul"]
documentation = "https://docs.rs/lightarchitects-soul"

[dependencies]
lightarchitects-core = { path = "../lightarchitects-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
# Storage backend abstractions (StorageBackend trait, StorageEntry, EntryFilter)
async-trait = "0.1"
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
# SQLite offline backend — bundled, no system dep (feature-gated)
rusqlite = { workspace = true, optional = true }
# Ingestion helpers — YAML frontmatter parsing (feature-gated)
serde_yaml = { version = "0.9", optional = true }
# Ollama HTTP embedding provider (feature-gated)
reqwest = { workspace = true, optional = true }
# FastEmbed in-process ONNX embedding (feature-gated)
fastembed = { version = "5", optional = true }
# Async streaming (feature-gated, used by Vault::load_directory)
futures-util = { workspace = true, optional = true }

[features]
default = []
sqlite           = ["dep:rusqlite"]
embedding-mock   = []
embedding-ollama   = ["dep:reqwest"]
embedding-fastembed = ["dep:fastembed"]
## llama.cpp HTTP embedding provider — points at a running llama.cpp server.
embedding-llama-cpp = ["dep:reqwest"]
## Enable BM25 + semantic retrieval via SQLite FTS5.
## Exposes `SoulDb`, `RetrievalPipeline`, and `RetrievalHit`.
search           = ["sqlite"]
## Enable markdown vault ingestion — `from_markdown` and `Vault::load_directory`.
ingestion        = ["dep:serde_yaml", "dep:futures-util"]
## Enable Cypher query generation — `CypherGenerator` and `StaticCypherGenerator`.
cypher           = []
## Enable LLM-backed Cypher generation — `LlmCypherGenerator` + `AsyncCypherGenerator`.
## Requires a running OpenAI-compatible endpoint (Ollama by default).
text2cypher      = ["cypher", "dep:reqwest"]
## Enable minimax coverage compaction — `SemanticCompactor`.
compaction       = ["search"]
## All features.
full             = ["embedding-mock", "embedding-ollama", "embedding-fastembed", "embedding-llama-cpp", "search", "ingestion", "cypher", "text2cypher", "compaction"]

# ── Backward-compatibility aliases ────────────────────────────────────────────
# These were the original names; kept so existing `features = ["pipeline"]`
# in downstream Cargo.toml files continue to work without changes.
pipeline  = ["search"]
cypher-gen = ["cypher"]

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
tokio-test = { workspace = true }
lightarchitects-core = { path = "../lightarchitects-core", features = ["test-utils"] }
toml = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
