[package]
name = "lightarchitects-turnlog"
version = "0.1.0"
description = "Ephemeral transactional log (Tier 1) for conversational agents — HMAC-chained NDJSON with promotion to helix"
publish = false
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["logging", "hmac", "mcp", "agents", "audit"]
documentation = "https://docs.rs/lightarchitects-turnlog"

[dependencies]
lightarchitects-core = { path = "../lightarchitects-core" }
lightarchitects-crypto = { path = "../lightarchitects-crypto", default-features = false }
# Schema: every log event IS an ayin::TraceSpan — no separate EntryPayload enum.
# Pinned to workspace; the serde_json BTreeMap key-order guarantee that backs
# HMAC chain determinism is tested by proptest in chain.rs (see FORMAT_VERSION).
ayin.workspace = true
tokio.workspace      = true
serde.workspace      = true
# SCHEMA-CRITICAL: serde_json 1.x guarantees BTreeMap key-order in
# serde_json::Value serialisation — this is load-bearing for HMAC chain
# determinism over nested metadata objects. Do NOT upgrade to 2.x without
# verifying key-order stability and running the proptest corpus in chain.rs.
serde_json = { workspace = true }
thiserror.workspace  = true
tracing.workspace    = true
chrono.workspace     = true
uuid.workspace       = true
secrecy.workspace    = true
rand.workspace       = true
hkdf.workspace       = true
sha2.workspace       = true
fs2.workspace        = true

[dev-dependencies]
tempfile.workspace   = true
criterion.workspace  = true
tokio-test.workspace = true
proptest.workspace   = true

[lints]
workspace = true
