[package]
name = "lightarchitects-webshell"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Local web GUI shell for the active coding agent. Embeds a PTY-hosted agent session (Claude Code by default) alongside a 3D session-helix panel. Build: luminous-weaving-nautilus."

[[bin]]
name = "lightarchitects-webshell"
path = "src/main.rs"

[dependencies]
lightarchitects-webshell-mcp-host = { path = "../lightarchitects-webshell-mcp-host" }
# Hardened path resolution — canonicalize_and_check (TOCTOU + symlink guard)
lightarchitects-arch = { path = "../lightarchitects-arch" }
# Canonical path resolution (unified-forging-vault Phase 1 helper)
lightarchitects = { path = "../lightarchitects", features = [
    "chat",
    "credentials",
    "providers-anthropic",
    "providers-openai",
    "credentials-display-names",
    "credentials-detailed-locator",
    "lightsquad",
    "loops-core",
    "agent-cli",
] }

# Aho-Corasick multi-pattern substring matching for the task classifier (HIGH H-8, no ReDoS).
aho-corasick = "1"
async-trait = "0.1"

# Squad Dispatch TeamManager path-dep (C-1 fix — added when lockfile collision resolved).
# CRITICAL C-1: LHS key MUST be the package name "lightarchitects-cli", not "lightarchitects_cli".
# The lib is imported as `lightarchitects_cli::*` at use-sites (lib name in lightarchitects-cli/Cargo.toml).
# Path dep gated on lockfile collision resolution (MED M-6 — ayin v0.1.0 in both vendor dirs).
# To enable: uncomment the line below and enable the "team-manager" feature.
# lightarchitects-cli = { path = "../../../../../lightarchitects-cli", package = "lightarchitects-cli", optional = true }

# Tier-1 ephemeral transactional log (unified-forging-turnlog)


# Async runtime — "signal" for graceful shutdown; "ws" feature of axum adds tungstenite transitively
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "process"] }

# Web framework. "ws" feature adds tungstenite-based WebSocket upgrade for Phase 2 PTY bridge.
axum = { workspace = true, features = ["ws", "macros"] }

# Stream/sink combinators for split WebSocket (SinkExt::send + StreamExt::next).
futures-util.workspace = true

# CancellationToken for clean subprocess cancellation on client disconnect.
tokio-util.workspace = true

# Middleware — CORS for dev, trace for request logging
tower-http = { workspace = true, features = ["cors", "trace"] }

# Embedded static assets — `../lightarchitects-webshell-ui/dist/` baked into the binary at compile time.
# "mime-guess" feature enables `EmbeddedFile::metadata().mimetype()`.
rust-embed = { version = "8", features = ["mime-guess"] }

# Constant-time HMAC byte comparison (avoids timing side-channels)
constant_time_eq = "0.3"

# PTY terminal bridge (Phase 2).
# 0.9 is the current stable release; pre_exec handles setsid+TIOCSCTTY natively (plan RG1-A1).
portable-pty = "0.9"

# CLI args via derive
clap = { workspace = true }

# HTTP client — "stream" feature enables Response::bytes_stream() for SSE consumption
# (Phase 3 AYIN SSE client). Workspace provides version + rustls-tls + json.
reqwest = { workspace = true, features = ["stream"] }

# Filesystem watcher — Phase 4 helix vault fallback event source.
notify.workspace = true

# In-memory async cache — gitforest topology + CI check-runs (Phase 4)
moka = { workspace = true, features = ["future"] }

# Allowlist validation for gitforest route params (Phase 4)
regex = { workspace = true }

# macOS Keychain access for server-side GitHub PAT storage (Phase 4 Agent B)
security-framework = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json.workspace = true
serde_yaml.workspace = true

# Errors
thiserror.workspace = true
anyhow.workspace = true

# TOML config editing for lightarchitects-cli native agent model management
toml = { workspace = true }

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Turnlog pepper
secrecy.workspace = true

uuid.workspace = true

# Date formatting for helix entry path projection
chrono.workspace = true

# Unified diff generation for /api/code/preview-diff
similar.workspace = true

# Per-build session registry (concurrent map, deadlock-safe clone-out API).
dashmap = { workspace = true }

# OS keyring — macOS Keychain / Linux Secret Service for token persistence.
keyring = { workspace = true }

# Safe SIGTERM on Unix (workspace unsafe_code = "deny" forbids libc::kill directly).
# "signal" feature: nix::sys::signal::{kill, Signal}.

# Session persistence — SQLite thread table for native session continuity.
rusqlite = { workspace = true }

# Telemetry hashing + decisions HMAC chain.
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
hex = "0.4"

[features]
# Gate the real TeamManager subprocess path behind a feature until lightarchitects-cli is
# published to crates.io (workspace rule C-1 prohibits external path deps).
team-manager = []

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }
# Integration-test HTTP harness — oneshot exercises the real router stack.
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
# Tempdir for memory module tests + coordination/sse test isolation.
tempfile = { workspace = true }
# Property-based testing for invariant coverage.
proptest = { workspace = true }

[[bench]]
name = "classifier"
harness = false

[lints]
workspace = true
