[package]
name = "lightarchitects"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified Light Architects SDK — core, clients, arena, oracle, helix, turnlog."
keywords = ["mcp", "ai", "sdk", "agentic", "lightarchitects"]

[lints]
workspace = true

# Enable all sub-features by default so all modules compile unconditionally.
# Refine into opt-in feature flags once the monolith compiles cleanly.
[features]
default = [
    "sqlite", "search", "ingestion", "compaction",
    "cypher", "embedding-ollama", "embedding-fastembed", "embedding-llama-cpp",
    "observe", "conversations", "http-client",
    "neo4j", "file", "dual", "fastembed", "rerank",
    "ssh", "cli",
]
sqlite               = []
search               = []
ingestion            = []
compaction           = []
cypher               = []
embedding-ollama     = []
embedding-fastembed  = []
embedding-llama-cpp  = []
observe              = []
conversations        = []
http-client          = []
neo4j                = []
file                 = []
dual                 = ["neo4j", "file"]
fastembed            = []
rerank               = []
ssh                  = []
cli                  = []
keychain             = []
text2cypher          = []
test-utils           = []

# ── Always-on external deps (union of all 13 merged crates) ──────────────────

[dependencies]
# Core runtime
rand        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
toml        = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
async-trait = "0.1"

# Crypto
hkdf          = { workspace = true }
hmac          = { workspace = true }
sha2          = { workspace = true }
aes-gcm       = { workspace = true }
ed25519-dalek = { workspace = true }
subtle        = { workspace = true }
secrecy       = { workspace = true }
zeroize       = { workspace = true }

# Auth
reqwest  = { workspace = true }
dirs     = "6"
hex      = "0.4"
chrono   = { workspace = true }
url      = "2"

# Common
uuid         = { workspace = true }
futures-util = { workspace = true }
regex        = { workspace = true }
moka         = { workspace = true }
walkdir      = { workspace = true }
fs2          = { workspace = true }

# Helix graph backend
neo4rs    = { workspace = true }
fastembed = { workspace = true }

# Arena
indicatif = { workspace = true }
clap      = { workspace = true }


# Auth CLI feature (axum OAuth callback, browser open, getrandom)
axum     = { workspace = true }
open     = { version = "5" }
getrandom = { version = "0.2" }

# SERAPH SSH transport
openssh = { workspace = true }

# SOUL SQLite backend
rusqlite = { workspace = true }

# macOS keychain (crypto keychain feature)
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true }

[dev-dependencies]
tokio          = { workspace = true, features = ["macros", "rt", "test-util"] }
tokio-test     = { workspace = true }
tempfile       = { workspace = true }
proptest       = { workspace = true }
pretty_assertions = { workspace = true }
mockito        = { workspace = true }
criterion      = { workspace = true }
serde_json     = { workspace = true }
